--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../CSS/main.css">
+    <link rel="stylesheet" href="CSS/main.css">
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400;500;600;700&family=Roboto+Condensed:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap" rel="stylesheet">
     <link
     rel="stylesheet"
@@ -18,8 +18,8 @@
            <img src="./multimedia/cuadrado negro.png" alt="Logo">
            <ul>
                <a href="../index.html"><li>Home</li></a>
-               <a href="../pages/contacto.html"><li>Contactos</li></a>
-               <a href="../pages/nosotros.html"><li>Nosotros</li></a>
+               <a href="pages/contacto.html"><li>Contactos</li></a>
+               <a href="pages/nosotros.html"><li>Nosotros</li></a>
            </ul>
        </nav>
         
